[tool.poetry]
name = "audiobook_prepper"
version = "0.1.0"
description = ""
authors = ["Jonatan Søgaard"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
mutagen = "^1.47.0"
mypy = "^1.10.1"
black = "^24.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
