[tool.poetry]
name = "audiobook_prepper"
version = "1.0"
description = ""
authors = ["Jonatan Søgaard"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
mutagen = "^1.47.0"
mypy = "^1.10.1"
black = "^24.4.2"
pytest = "^8.2.2"
tabulate = "^0.9.0"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.scripts]
audiobook_prepper = "audiobook_prepper.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
